--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-This file was created by IntelliJ IDEA 11.1.3 for binding GitHub repository
+A simple SpringMVC HelloWorld app.
+A Html/JSP/JavaScript client, talks to a Spring-DI enabled server with a simplistic Controller/Service/DAO design.
+The app is tested using JUnit, FEST assertions and Selenium.
+The app's functionality is deliberately simplistic, but is useful as a template to bootstrap more complex apps.
+
+
