--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 A simple SpringMVC HelloWorld app.
 A Html/JSP/JavaScript client, talks to a Spring-DI enabled server with a simplistic Controller/Service/DAO design.
 The app is tested using JUnit, FEST assertions and Selenium.
-The application's functionality is deliberately simplistic, but is useful as a template to bootstrap more complex apps.
+The application's functionality is deliberately simplistic, but is useful as a template to bootstrap more complex applications.
 
 See also http://www.shaunabram.com/springmvc-continuous-deployment/
